--- a/server-auth/kubernetes/service.yaml
+++ b/server-auth/kubernetes/service.yaml
@@ -3,6 +3,7 @@ kind: Service
 metadata:
   annotations:
     cloud.google.com/neg: '{"ingress":true}'
+    cloud.google.com/backend-config: '{"default": "be"}'
   labels:
     app: server-auth
   name: server-auth-service
