--- a/client/package.json
+++ b/client/package.json
@@ -10,13 +10,17 @@
   },
   "dependencies": {
     "@google-cloud/storage": "^7.11.0",
+    "@tsparticles/engine": "^3.4.0",
+    "@tsparticles/react": "^3.0.0",
+    "@tsparticles/slim": "^3.4.0",
     "atob": "^2.1.2",
     "big.js": "^6.2.1",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
-    "tailwindcss-animated": "^1.0.1"
+    "tailwindcss-animated": "^1.0.1",
+    "tailwindcss-patterns": "^0.1.2"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -27,7 +31,6 @@
     "eslint-config-next": "14.2.3",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "tailwindcss-bg-patterns": "^0.3.0",
     "typescript": "^5"
   }
 }
